--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,10 @@ dependencies {
     implementation "androidx.core:core-ktx:$core_ktx_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "com.google.android.material:material:$material_version"
+
+    // Layout support
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    implementation "com.otaliastudios:zoomlayout:$zoomlayout_version"
 
     // Navigation support
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
