--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         appcompat_version = "1.4.0"
         material_version = "1.4.0"
         constraintlayout_version = "2.1.2"
+        zoomlayout_version = '1.9.0'
         nav_version = "2.3.5"
         lifecycle_version = "2.4.0"
         room_version = '2.4.0'
