--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ buildscript {
         junit_version = "4.13.2"
         android_junit_version = "1.1.3"
         espresso_version = "3.4.0"
+
+        guava_version = "31.0.1-android"
     }
 
     repositories {
