--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         zoomlayout_version = '1.9.0'
         nav_version = "2.3.5"
         lifecycle_version = "2.4.0"
+        hilt_version = '2.38.1'
         room_version = '2.4.0'
 
         junit_version = "4.13.2"
@@ -29,6 +30,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_gradle_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
